# ipycollections-extension

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
ipycollections/: __init__.py  formatter.py  printer.py
src/: index.ts  mimerenderers.ts  selection.ts
src/__tests__/: ipycollections.spec.ts
style/: base.css  index.css
ui-tests/: package.json
ui-tests/tests/: ipycollections.spec.ts
